--- a/cleanrl/batch_training/README
+++ b/cleanrl/batch_training/README
@@ -1,5 +1,11 @@
-Unter diesem link können Beispiel Datensätze mit Video und zugehörigen Labels für verschiedene Spiele gefunden werden. 
+# Batch pre training of CNNs for different games
 
-https://hessenbox.tu-darmstadt.de/getlink/fiNBqMsY7zAtqDdGZCQdyGSo/batch_training
+For pre training a batch of CNNs for differnt games use the `scripts/pre_train_cnn_all.sh` script
+it generates datasets and trains a CNN on them for the following games `"PongNoFrameskip-v4" "SeaquestNoFrameskip-v4" "MsPacmanNoFrameskip-v4" "SpaceInvadersNoFrameskip-v4" "FreewayNoFrameskip-v4"`.
 
-Den inhalt in den batch_training folder und dann mit scripts/pre_train_cnn_all.sh für jeden Datensatz ein CNN trainieren.
+If you want to use pre generated datasets put them in the batch_training folder.
+When using OCAtari with a version greater then 1.0.2 the dataset generation does not work, under the follwing link, we provide pre generated data for the games menthioned above.
+
+`https://hessenbox.tu-darmstadt.de/getlink/fiNBqMsY7zAtqDdGZCQdyGSo/batch_training`
+
+copy the content of this folder into the batch_traing folder.
